<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="50dp"
    tools:context=".StartingPoint" 
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_gravity="center">

        <TextView
            android:id="@+id/totalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total_int"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/totalInt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:textSize="20sp" 
            android:text="@string/total_amount"/>
    </LinearLayout>

    <Button
        android:id="@+id/addInt"
        android:background="@drawable/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/subInt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sub_int" 
        />

</LinearLayout>